# hw5_Computing_DSDM_Campos-Gutierrez

./: .coverage  README.md  hw4.py  hw5.py  main.py  pyproject.toml
notebooks/: test.ipynb
src/diabetes_mellitus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/diabetesmellitus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/diabetesmellitus/load_clean_data/: __init__.py  fill_nan_mean.py  load_data.py  remove_nan.py  transform_data.py
src/diabetesmellitus/train_model/: fit_model.py
src/hw5_computing_dsdm_campos_gutierrez.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_hw4.py  test_hw5_q1.py  test_hw5_q2.py  test_hw5_q3.py
